@@ -9,11 +9,11 @@ require.config({
     "backbone-all": "lib/backbone-all",
     "backbone.noConflict": "lib/backbone.noConflict",
     "backbone.marionette": "_vendor/bower_components/backbone.marionette/lib/core/amd/backbone.marionette",
-    "backbone.wreqr": "_vendor/bower_components/backbone.wreqr/lib/amd/backbone.wreqr",
-    "backbone.babysitter": "_vendor/bower_components/backbone.babysitter/lib/amd/backbone.babysitter",
+    "backbone.wreqr": "_vendor/bower_components/backbone.wreqr/lib/backbone.wreqr",
+    "backbone.babysitter": "_vendor/bower_components/backbone.babysitter/lib/backbone.babysitter",
     "mustache": "_vendor/bower_components/mustache/mustache",
     "jquery": "_vendor/bower_components/jquery/dist/jquery",
-    "bootstrap": "_vendor/bootstrap/dist/js/bootstrap.min",
+    "bootstrap": "_vendor/bower_components/bootstrap/dist/js/bootstrap.min",
     "text": "_vendor/bower_components/text/text",
     "EventEmitter": "util/emitter",
     //"Github": "_vendor/bower_components/github/github",
