@@ -25,7 +25,7 @@
   ],
   "dependencies": {
     "almond": "*",
-    "backbone.marionette": "~1.7.3",
+    "backbone.marionette": "~1.8.5",
     "less": "~1.7.0",
     "lodash": "~2.4.1",
     "moment": "~2.5.1",
