@@ -37,7 +37,7 @@
     <div id="repos"></div>
   </div>
 
-  <script src="_vendor/bower_components/requirejs/require.js" data-main="index"></script>
+  <script src="_vendor/bower_components/requirejs/require.js" data-main="app"></script>
 </body>
 </html>
 
