@@ -10,54 +10,54 @@
 
 // Core variables and mixins
 @import "variables.less";
-@import "../_vendor/bootstrap/less/mixins.less";
+@import "../_vendor/bower_components/bootstrap/less/mixins.less";
 
 // Reset
-@import "../_vendor/bootstrap/less/normalize.less";
-@import "../_vendor/bootstrap/less/print.less";
+@import "../_vendor/bower_components/bootstrap/less/normalize.less";
+@import "../_vendor/bower_components/bootstrap/less/print.less";
 
 // Core CSS
-@import "../_vendor/bootstrap/less/scaffolding.less";
-@import "../_vendor/bootstrap/less/type.less";
-@import "../_vendor/bootstrap/less/code.less";
-@import "../_vendor/bootstrap/less/grid.less";
-@import "../_vendor/bootstrap/less/tables.less";
-@import "../_vendor/bootstrap/less/forms.less";
-@import "../_vendor/bootstrap/less/buttons.less";
+@import "../_vendor/bower_components/bootstrap/less/scaffolding.less";
+@import "../_vendor/bower_components/bootstrap/less/type.less";
+@import "../_vendor/bower_components/bootstrap/less/code.less";
+@import "../_vendor/bower_components/bootstrap/less/grid.less";
+@import "../_vendor/bower_components/bootstrap/less/tables.less";
+@import "../_vendor/bower_components/bootstrap/less/forms.less";
+@import "../_vendor/bower_components/bootstrap/less/buttons.less";
 
 // Components: common
-/* @import "../_vendor/bootstrap/less/component-animations.less"; */
-@import "../_vendor/bootstrap/less/input-groups.less";
-/* @import "../_vendor/bootstrap/less/dropdowns.less"; */
-/* @import "../_vendor/bootstrap/less/list-group.less"; */
-@import "../_vendor/bootstrap/less/panels.less";
-/* @import "../_vendor/bootstrap/less/wells.less"; */
-/* @import "../_vendor/bootstrap/less/close.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/component-animations.less"; */
+@import "../_vendor/bower_components/bootstrap/less/input-groups.less";
+/* @import "../_vendor/bower_components/bootstrap/less/dropdowns.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/list-group.less"; */
+@import "../_vendor/bower_components/bootstrap/less/panels.less";
+/* @import "../_vendor/bower_components/bootstrap/less/wells.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/close.less"; */
 
 // Components: Nav
-/* @import "../_vendor/bootstrap/less/navs.less"; */
-/* @import "../_vendor/bootstrap/less/navbar.less"; */
-@import "../_vendor/bootstrap/less/button-groups.less";
-/* @import "../_vendor/bootstrap/less/breadcrumbs.less"; */
-/* @import "../_vendor/bootstrap/less/pagination.less"; */
-/* @import "../_vendor/bootstrap/less/pager.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/navs.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/navbar.less"; */
+@import "../_vendor/bower_components/bootstrap/less/button-groups.less";
+/* @import "../_vendor/bower_components/bootstrap/less/breadcrumbs.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/pagination.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/pager.less"; */
 
 // Components: Popovers
-/* @import "../_vendor/bootstrap/less/modals.less"; */
-/* @import "../_vendor/bootstrap/less/tooltip.less"; */
-/* @import "../_vendor/bootstrap/less/popovers.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/modals.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/tooltip.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/popovers.less"; */
 
 // Components: Misc
-/* @import "../_vendor/bootstrap/less/alerts.less"; */
-/* @import "../_vendor/bootstrap/less/thumbnails.less"; */
-/* @import "../_vendor/bootstrap/less/media.less"; */
-/* @import "../_vendor/bootstrap/less/labels.less"; */
-/* @import "../_vendor/bootstrap/less/badges.less"; */
-/* @import "../_vendor/bootstrap/less/progress-bars.less"; */
-/* @import "../_vendor/bootstrap/less/accordion.less"; */
-/* @import "../_vendor/bootstrap/less/carousel.less"; */
-/* @import "../_vendor/bootstrap/less/jumbotron.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/alerts.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/thumbnails.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/media.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/labels.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/badges.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/progress-bars.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/accordion.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/carousel.less"; */
+/* @import "../_vendor/bower_components/bootstrap/less/jumbotron.less"; */
 
 // Utility classes
-@import "../_vendor/bootstrap/less/utilities.less"; // Has to be last to override when necessary
-@import "../_vendor/bootstrap/less/responsive-utilities.less";
+@import "../_vendor/bower_components/bootstrap/less/utilities.less"; // Has to be last to override when necessary
+@import "../_vendor/bower_components/bootstrap/less/responsive-utilities.less";
